# swhkd

./: .editorconfig  .gitignore  .rustfmt.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FINDINGS.md  INSTALL.md  LICENSE  Makefile  README.md  build.rs  com.github.swhkd.pkexec.policy  dependencies.txt  flake.nix  install.sh  release.sh  requirements.txt  swhkd  swhkd-keys.5.scd  swhkd.1.scd  swhkd.5.scd  swhkd.nix  swhkd.py  swhkd.rules  swhks.1.scd  test.py  utils.py
.github/: build.yml_
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  ci.yml  devskim.yml  python-app.yml  swhkd.yml
contrib/: PKGBUILD
contrib/PKGBUILD/glibc/: PKGBUILD
contrib/PKGBUILD/musl_libc/: PKGBUILD
contrib/glibc/: PKGBUILD
contrib/init/openrc/: README.md  swhkd
contrib/init/systemd/: README.md  hotkeys.service  hotkeys.sh  sway-session.target
contrib/musl_libc/: PKGBUILD
docs/: INSTALL.md  KEYS.md  swhkd-keys.5.scd  swhkd.1.scd  swhkd.5.scd  swhkdrc  swhks.1.scd
docs/man/: Makefile  swhkc.1  swhkc.md  swhkd.1  swhkd.md  swhks.1  swhks.md
nix/: module.nix  package.nix  shell.nix
scripts/: build-polkit-policy.sh
src/: alias_patch.diff  config.rs  daemon.rs  main.rs  perms.rs  server.rs  swhkd.py  tests.rs  uinput.rs
src/utils/: config.json  config.py  input.py  log.py
swhkd/: Cargo.toml  build.rs
swhkd/src/: config.rs  daemon.rs  environ.rs  perms.rs  tests.rs  uinput.rs
swhks/: Cargo.toml
swhks/src/: environ.rs  ipc.rs  main.rs
