[package]
description = "Sxhkd clone for Wayland (works on TYY and X11 too)"
edition = "2021"
keywords = ["wayland", "hotkey", "evdev"]
license = "BSD-2-Clause"
name = "Simple-Wayland-HotKey-Daemon"
repository = "https://git.sr.ht/~shinyzenith/swhkd"
version = "1.1.4"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n"
]
exclude = [
    "CODE_OF_CONDUCT.md",
    "CONTRIBUTING.md",
	"contrib/*",
	"docs/*",
	"release.sh",
]

[dependencies]
clap = "3.1"
env_logger = "0.8.4"
evdev = { version = "0.11.3", features = ["tokio"] }
log = "0.4.0"
nix = "0.23.1"
sysinfo = "0.23.0"
itertools = "0.10"
signal-hook = "0.3.13"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

[[bin]]
name = "swhkd"
path = "src/daemon.rs"

[[bin]]
name = "swhks"
path = "src/server.rs"
