[package]
description = "Sxhkd clone for Wayland (works on TYY and X11 too)"
edition = "2021"
name = "Simple-Wayland-HotKey-Daemon"
version = "1.2.1"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n"
]

[build-dependencies]
flate2 = "1.0.24"

[dependencies]
clap = "3.1.6"
env_logger = "0.9.0"
evdev = { version = "0.11.4", features = ["tokio"] }
itertools = "0.10.3"
log = "0.4.14"
nix = "0.23.1"
signal-hook = "0.3.13"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
sysinfo = "0.23.5"
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"

[[bin]]
name = "swhkd"
path = "src/daemon.rs"
