[package]
description = "Server for swhkd to run shell commands at invoking user level."
edition = "2021"
license = "BSD-2-Clause"
name = "swhks"
version = "1.2.1"
authors = [
	"Shinyzenith <aakashsensharma@gmail.com>\n",
	"Angelo Fallaria <ba.fallaria@gmail.com>\n",
	"EdenQwQ <lsahlm1eden@gmail.com>\n"
]

[dependencies]
env_logger = "0.9.0"
log = "0.4.14"
nix = "0.23.1"
sysinfo = "0.23.5"
clap = "3.1.6"

[[bin]]
name = "swhks"
path = "src/main.rs"
